--- a/back-end/bloco-22-node-js/dia-22.1/io-local/package.json
+++ b/back-end/bloco-22-node-js/dia-22.1/io-local/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node readFileSync.js"
+    "start": "node writeFile.js"
   },
   "keywords": [],
   "author": "",
