--- a/back-end/bloco-22-node-js/dia-22.1/my-scripts/package.json
+++ b/back-end/bloco-22-node-js/dia-22.1/my-scripts/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bmi.js"
+    "bmi": "node bmi.js"
   },
   "author": "Fernanda Vidal",
   "license": "ISC"
