--- a/back-end/bloco-22-node-js/dia-22.1/my-scripts/package.json
+++ b/back-end/bloco-22-node-js/dia-22.1/my-scripts/package.json
@@ -8,5 +8,8 @@
     "bmi": "node bmi.js"
   },
   "author": "Fernanda Vidal",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
