--- a/back-end/bloco-22-node-js/dia-22.4/soccer-team-manager/package.json
+++ b/back-end/bloco-22-node-js/dia-22.4/soccer-team-manager/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8",
     "express": "^4.17.1",
-    "express-async-errors": "3.1"
+    "express-async-errors": "3.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
