--- a/back-end/bloco-22-node-js/dia-22.3/cacaoTrybe/package.json
+++ b/back-end/bloco-22-node-js/dia-22.3/cacaoTrybe/package.json
@@ -17,6 +17,7 @@
     "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-trybe-backend": "^1.0.1",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0"
   }
 }
