--- a/back-end/bloco-24-ORM-e-autenticacao/dia-24.1/app-with-sequelize/package.json
+++ b/back-end/bloco-24-ORM-e-autenticacao/dia-24.1/app-with-sequelize/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/unit/**/*$NAME*.test.js --exit",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -17,6 +17,10 @@
     "sequelize": "^6.22.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "sequelize-cli": "^6.4.1",
+    "sinon": "^14.0.0"
   }
 }
