--- a/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-n-n/package.json
+++ b/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-n-n/package.json
@@ -2,9 +2,10 @@
   "name": "orm-n-n",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
