Implementa middleware de erro.

--- a/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-trybe-course/.env.example
+++ b/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-trybe-course/.env.example
@@ -3,3 +3,4 @@ MYSQL_PASSWORD=<SENHA DE ACESSO DO BANCO>
 MYSQL_DATABASE=<NOME DO BANCO DE DADOS>
 MYSQL_HOST=<ENDEREÇO DO BANCO>
 NODE_PORT=<PORTA DO NODE>
+TOKEN_SECRET_KEY=<SUA SENHA PARA O JWT>
