--- a/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-trybe-course/package.json
+++ b/back-end/bloco-24-ORM-e-autenticacao/dia-24.3/orm-trybe-course/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "joi": "^17.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.23.0",
