feat: get/books, post/books e get/books/:id

--- a/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/.env
+++ b/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/.env
@@ -1,4 +1,5 @@
-host=localhost
-user=root
-password=password
-database=blogs_api
+DB_HOSTNAME=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=password
+DB_DATABASE=books_api
