--- a/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/package.json
+++ b/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.6.2",
     "mysql2": "^2.3.3",
     "restify-errors": "^8.0.2"
   }
