--- a/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/package.json
+++ b/back-end/sessao-8-introducao-typeScript/dia-3/express-typescript/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
